# ai-learn

./: .gitignore  README.md  main.py  medium-links.md  pyproject.toml
demo/: 01 - movie-review-bot.py  02 - simple-rag.py  03 - basic-qa-document.py  04 - advanced-qa-document.py  05 - ai-research-assistant.py
example/: 01 - basic-runable.py  02 - basic_chat_model.py  03 - basic-schema.py  04 - basic_prompt_message.py  05 - basic-output-parser.py  06 - basic-chain-pattern.py  07 - basic-chain-debug.py  08 - basic-loader.py  09 - basic-splitter.py  10 - basic-embedding-vector.py  11 - basic-vector-store.py  12 - basic-rag-workflow.py  13 - advanced-rag.py  14 - basic-memory.py  15 - basic-langgraph.py  16 - basic-condition-edge.py  17 - basic-human-interrupt.py
